--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -4,4 +4,5 @@
     <string name="roll">Открыть</string>
     <string name="name">Диплинк</string>
     <string name="errorMsg">Кажется, неправильный диплинк!</string>
+    <string name="appname">appname://</string>
 </resources>
